Added a world position component class --Joshua

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,3 +1,5 @@
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=309EF652425F0392241FC8BE656EE866
+CopyrightNotice=Copyright Joshua Grimard 2022
+
