Refactored code. Optimized for performance. --Joshua

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,6 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Maps/Levels/BuildingLevel.BuildingLevel
 EditorStartupMap=/Game/Maps/Levels/BuildingLevel.BuildingLevel
+GlobalDefaultGameMode=/Game/Blueprints/Building_EscapeGameModeBase_BP.Building_EscapeGameModeBase_BP_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
